--- a/livego.yaml
+++ b/livego.yaml
@@ -9,7 +9,7 @@
 # rtmp_addr: ":1935"
 # read_timeout: 10
 # write_timeout: 10
-level: "debug"
+# level: "debug"
 server:
   appname: "live"
   key: "123456"
